2007-07-04  Andy Wingo  <wingo@pobox.com>

	* flumotion/common/bundle.py (BundlerBasket.getDependencies):
	Handle case where bundle has no dependencies. Fixes #665, finally.

2007-07-04  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/playlist/playlist.py:
	  Return item if we successfully scheduled it.
	* flumotion/component/producers/playlist/playlistparser.py:
	  Unlink item from list if we failed to schedule it, so we don't have
	  stale entries that we can't clean up properly.
	* flumotion/test/test_component_playlist.py:
	  Return item in FakeProducer as API now requires it.

2007-07-04  Andy Wingo  <wingo@pobox.com>

	* flumotion/common/registry.py (RegistryDirectory.__init__)
	(RegistryDirectory._getFileLists): Keep a list of dirs to watch as
	well as files. Don't descend into .svn dirs.
	(RegistryDirectory.rebuildNeeded): Check the dirs as well.
	See #665.

2007-07-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/combiners/switch/switch.py
	  (Switch.switch_to_for_event, Switch.switch_to_cb):
	switch_to can return a deferred or a boolean, so callback
	on a maybeDeferred. Fixes pychecker warning of comparing to
	False.

2007-07-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/combiners/switch/patternswitch.py
	  (PatternEventSwitcher.checkConfig):
	Fix typo.

2007-07-04  Andy Wingo  <wingo@pobox.com>

	* flumotion/common/fxml.py (Parser.checkAttributes): Remove
	unnecessary call to str().
	(Parser.parseAttributes): Don't call str() always; instead allow
	the caller to decide, while defaulting to the existing behavior.
	Fixes #661.

2007-07-04  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/combiners/switch/switch.xml:
	Fix misnamed dependency.

2007-07-03  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/admin/admin.py (AdminModel.connection_failed):
	connection_failed was being passed 3 arguments all the time,
	so make it take 3!
